--- a/tasks/set_firewall_zone.yml
+++ b/tasks/set_firewall_zone.yml
@@ -3,7 +3,7 @@
   uci:
     command: set
     config: "firewall"
-    section: "{{name}}"
+    index: "{{index}}"
     option: "name"
     type: "zone"
     value: "{{name}}"
@@ -15,7 +15,7 @@
   uci:
     command: set
     config: "firewall"
-    section: "{{name}}"
+    index: "{{index}}"
     option: "network"
     type: "zone"
     value: "{{network}}"
@@ -27,7 +27,7 @@
   uci:
     command: set
     config: "firewall"
-    section: "{{name}}"
+    index: "{{index}}"
     option: "forward"
     type: "zone"
     value: "{{forward}}"
@@ -40,7 +40,7 @@
   uci:
     command: set
     config: "firewall"
-    section: "{{name}}"
+    index: "{{index}}"
     option: "input"
     type: "zone"
     value: "{{input}}"
@@ -53,7 +53,7 @@
   uci:
     command: set
     config: "firewall"
-    section: "{{name}}"
+    index: "{{index}}"
     option: "output"
     type: "zone"
     value: "{{output}}"
@@ -66,7 +66,7 @@
   uci:
     command: set
     config: "firewall"
-    section: "{{name}}"
+    index: "{{index}}"
     option: "masq"
     type: "zone"
     value: "{{masq | int}}"
