--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -41,8 +41,10 @@
     family: "{{item.1.family | default({})}}"
     src: "{{item.1.src | default({})}}"
     src_ip: "{{item.1.src_ip | default({})}}"
+    src_port: "{{item.1.src_port | default({})}}"
     dest: "{{item.1.dest | default({})}}"
     dest_ip: "{{item.1.dest_ip | default({})}}"
+    dest_port: "{{item.1.dest_port | default({})}}"
     target: "{{item.1.target}}"
     enabled: "{{item.1.enabled | default(True)}}"
   with_indexed_items: "{{rules}}"
