--- a/tasks/set_firewall_forwarding.yml
+++ b/tasks/set_firewall_forwarding.yml
@@ -9,7 +9,7 @@
     value: "{{src}}"
   notify:
     - uci commit firewall
-    - reload network for openwrt-firewall
+    - reload firewall
 
 - name: set firewall-forwarding dest
   uci:
@@ -21,4 +21,4 @@
     value: "{{dest}}"
   notify:
     - uci commit firewall
-    - reload network for openwrt-firewall
+    - reload firewall
