--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,15 +4,15 @@
     command: set_object
     config: firewall
     type: zone
-    index: "{{item.1.index | default(item.0)}}"
+    index: "{{ item.1.index | default(item.0) }}"
     values:
-      name: "{{item.1.name | default(item.1.network)}}"
-      network: "{{item.1.network}}"
-      forward: "{{item.1.forward | default(None)}}"
-      input: "{{item.1.input | default(None)}}"
-      output: "{{item.1.output | default(None)}}"
-      masq: "{{item.1.masq | default(None) | int(None)}}"
-  with_indexed_items: "{{zones}}"
+      name: "{{ item.1.name | default(item.1.network) }}"
+      network: "{{ item.1.network }}"
+      forward: "{{ item.1.forward | default(None) }}"
+      input: "{{ item.1.input | default(None) }}"
+      output: "{{ item.1.output | default(None) }}"
+      masq: "{{ item.1.masq | default(None) | int(None) }}"
+  with_indexed_items: "{{ zones }}"
   notify:
     - uci commit firewall
     - reload firewall
@@ -22,11 +22,11 @@
     command: set_object
     config: firewall
     type: forwarding
-    index: "{{item.1.index | default(item.0)}}"
+    index: "{{ item.1.index | default(item.0) }}"
     values:
-      src: "{{item.1.src}}"
-      dest: "{{item.1.dest}}"
-  with_indexed_items: "{{forwardings}}"
+      src: "{{ item.1.src }}"
+      dest: "{{ item.1.dest }}"
+  with_indexed_items: "{{ forwardings }}"
   notify:
     - uci commit firewall
     - reload firewall
@@ -36,18 +36,18 @@
     command: set_object
     config: firewall
     type: redirect
-    index: "{{item.1.index | default(item.0)}}"
+    index: "{{ item.1.index | default(item.0) }}"
     values:
-      name: "{{item.1.name}}"
-      src: "{{item.1.src}}"
-      proto: "{{item.1.proto}}"
-      src_dport: "{{item.1.src_dport}}"
-      dest_ip: "{{item.1.dest_ip}}"
-      dest_port: "{{item.1.dest_port}}"
-      target: "{{item.1.target}}"
-      dest: "{{item.1.dest}}"
-      enabled: "{{item.1.enabled | default(None) | int(None)}}"
-  with_indexed_items: "{{redirects}}"
+      name: "{{ item.1.name }}"
+      src: "{{ item.1.src }}"
+      proto: "{{ item.1.proto }}"
+      src_dport: "{{ item.1.src_dport }}"
+      dest_ip: "{{ item.1.dest_ip }}"
+      dest_port: "{{ item.1.dest_port }}"
+      target: "{{ item.1.target }}"
+      dest: "{{ item.1.dest }}"
+      enabled: "{{ item.1.enabled | default(None) | int(None) }}"
+  with_indexed_items: "{{ redirects }}"
   notify:
     - uci commit firewall
     - reload firewall
@@ -57,20 +57,20 @@
     command: set_object
     config: firewall
     type: rule
-    index: "{{item.1.index | default(item.0)}}"
+    index: "{{ item.1.index | default(item.0) }}"
     values:
-      name: "{{item.1.name}}"
-      family: "{{item.1.family | default(None)}}"
-      src: "{{item.1.src | default(None)}}"
-      src_ip: "{{item.1.src_ip | default(None)}}"
-      src_port: "{{item.1.src_port | default(None)}}"
-      dest: "{{item.1.dest | default(None)}}"
-      dest_ip: "{{item.1.dest_ip | default(None)}}"
-      dest_port: "{{item.1.dest_port | default(None)}}"
-      target: "{{item.1.target}}"
-      enabled: "{{item.1.enabled | default(True) | int(None)}}"
-      icmp_type: "{{item.1.icmp_type | default(None)}}"
-  with_indexed_items: "{{rules}}"
+      name: "{{ item.1.name }}"
+      family: "{{ item.1.family | default(None) }}"
+      src: "{{ item.1.src | default(None) }}"
+      src_ip: "{{ item.1.src_ip | default(None) }}"
+      src_port: "{{ item.1.src_port | default(None) }}"
+      dest: "{{ item.1.dest | default(None) }}"
+      dest_ip: "{{ item.1.dest_ip | default(None) }}"
+      dest_port: "{{ item.1.dest_port | default(None) }}"
+      target: "{{ item.1.target }}"
+      enabled: "{{ item.1.enabled | default(True) | int(None) }}"
+      icmp_type: "{{ item.1.icmp_type | default(None) }}"
+  with_indexed_items: "{{ rules }}"
   notify:
     - uci commit firewall
     - reload firewall
@@ -78,8 +78,8 @@
 - name: set custom_rules
   include: set_custom_rule.yml
   vars:
-    index: "{{item.1.index | default(item.0)}}"
-    name: "{{item.1.name | default({})}}"
-    content: "{{item.1.content | default({})}}"
-    reload: "{{item.1.reload | default({})}}"
-  with_indexed_items: "{{custom_rules}}"
+    index: "{{ item.1.index | default(item.0) }}"
+    name: "{{ item.1.name | default(None) }}"
+    content: "{{ item.1.content | default(None) }}"
+    reload: "{{ item.1.reload | default(None) }}"
+  with_indexed_items: "{{ custom_rules }}"
